--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,18 +6,12 @@ galaxy_info:
 
   license: GPLv3
 
-  min_ansible_version: 2.7.x
+  min_ansible_version: 2.8
 
   platforms:
-    - name: Ubuntu
-      versions:
-        - all
     - name: RHEL/CentOS
       versions:
-        - all
-    - name: Windows
-      versions:
-        - all
+        - 7
 
   galaxy_tags: []
 
