--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,9 +12,9 @@ platforms:
     volume_mounts:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
     command: "/usr/sbin/init"
-
 provisioner:
   name: ansible
+  log: true
   lint:
     name: ansible-lint
 verifier:
